--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "So far, we've worked with a non-hierarchical clustering algorithm, K-Means Clustering. K-Means works by taking a set parameter that tells it how many clusters we think exist in the data, and then uses the Expectation Maximization (EM) algorithm to iteratively shift each cluster centroid to the best possible position by constantly calculating and recalculating the centroid's position by assigning each point to the cluster centroid they are closest to with each new step, and then moving the centroid to the center of all the points currently assigned to that centroid. With non-hierarchical algorithms, there can be no subgroups--that is, no clusters within clusters.\n",
     "\n",
-    "This is where Agglomerative Clustering algorithms come in. In agglomerative Clustering, the algorithm starts with n clusters (where n is the number of data points) and proceeds by merging the most similar clusters, untile some stopping criterion. in `scikit-learn`, the stopping criterion that is implemented is \"number of clusters\".  If left alone, the algorithm will work until it has merged every cluster into one giant cluster. We can also set the limit if we want to stop when there are only \\[x\\] clusters remaining. \n",
+    "This is where Agglomerative Clustering algorithms come in. In agglomerative Clustering, the algorithm starts with n clusters (where n is the number of data points) and proceeds by merging the most similar clusters, until some stopping criterion. in `scikit-learn`, the stopping criterion that is implemented is \"number of clusters\".  If left alone, the algorithm will work until it has merged every cluster into one giant cluster. We can also set the limit if we want to stop when there are only \\[x\\] clusters remaining. \n",
     "\n",
     "### Linking Similar Clusters Together\n",
     "\n",
@@ -70,6 +70,13 @@
     "\n",
     "In this lesson, we learned about how the HAC algorithm derives its clusters, including different linkage criteria that can be used to determine which clusters should be merged at any given point. We also examined some visualizations of HAC algorithms, in the forms of dendrograms and clustergrams!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
