--- a/index.ipynb
+++ b/index.ipynb
@@ -16,14 +16,24 @@
     "\n",
     "* Demonstrate an understanding of how the Hierarchical Agglomerative Clustering (HAC) algorithm finds clusters\n",
     "* Compare and contrast K-Means and HAC methodologies\n",
-    "* Create and interpret a dendrogram using HAC\n",
-    "\n",
+    "* Create and interpret a dendrogram using HAC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Understanding Hierarchical Clustering\n",
     "\n",
     "So far, we've worked with a non-hierarchical clustering algorithm, K-Means Clustering. K-Means works by taking a set parameter that tells it how many clusters we think exist in the data, and then uses the Expectation Maximization (EM) algorithm to iteratively shift each cluster centroid to the best possible position by constantly calculating and recalculating the centroid's position by assigning each point to the cluster centroid they are closest to with each new step, and then moving the centroid to the center of all the points currently assigned to that centroid. With non-hierarchical algorithms, there can be no subgroups--that is, no clusters within clusters.\n",
     "\n",
-    "This is where Agglomerative Clustering algorithms come in. In agglomerative Clustering, the algorithm starts with n clusters (where n is the number of data points) and proceeds by merging the most similar clusters, until some stopping criterion. in `scikit-learn`, the stopping criterion that is implemented is \"number of clusters\".  If left alone, the algorithm will work until it has merged every cluster into one giant cluster. We can also set the limit if we want to stop when there are only \\[x\\] clusters remaining. \n",
-    "\n",
+    "This is where Agglomerative Clustering algorithms come in. In agglomerative Clustering, the algorithm starts with n clusters (where n is the number of data points) and proceeds by merging the most similar clusters, until some stopping criterion. in `scikit-learn`, the stopping criterion that is implemented is \"number of clusters\".  If left alone, the algorithm will work until it has merged every cluster into one giant cluster. We can also set the limit if we want to stop when there are only \\[x\\] clusters remaining. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Linking Similar Clusters Together\n",
     "\n",
     "Several linkage criteria that have different definitions for “most similar cluster” differently can be used. The measure is always defined between two existing cluster up until that point, so the later in the algorithms, the bigger the clusters get.\n",
