Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -46,8 +46,13 @@
     "\n",
     "- **complete** (or maximum linkage): merges the two clusters that have the smallest **_maximum_** distance between their points.\n",
     "\n",
-    "As we'll see in the next lab, these linkage criteria can definitely have an effect on how the clustering algorithm performs. As always seems to be the case with Data Science, no one of these is \"best\"--which one you should use often depends on the structure of your data, and/or your own goals. \n",
-    "\n",
+    "As we'll see in the next lab, these linkage criteria can definitely have an effect on how the clustering algorithm performs. As always seems to be the case with Data Science, no one of these is \"best\"--which one you should use often depends on the structure of your data, and/or your own goals. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### A Visual Example\n",
     "\n",
     "It's often easier to understand what the HAC algorithm is doing when we look at the decisions it makes at each given step. The following diagram demonstrates the clusters created at each step for a dataset of 16 points. Take a look at the diagram and see if you can figure out what the algorithm is doing at each step as it merges clusters together:\n",
