--- a/index.ipynb
+++ b/index.ipynb
@@ -58,9 +58,13 @@
     "It's often easier to understand what the HAC algorithm is doing when we look at the decisions it makes at each given step. The following diagram demonstrates the clusters created at each step for a dataset of 16 points. Take a look at the diagram and see if you can figure out what the algorithm is doing at each step as it merges clusters together:\n",
     "\n",
     "\n",
-    "<img src='hac_iterative.png'>\n",
-    "\n",
-    "\n",
+    "<img src='hac_iterative.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "As we can see from the diagram above, in each step, the algorithm takes the two clusters that are closest together (and remember, we define \"closest together\" according to whichever linkage criteria we choose to use), and then **_merge_** those two clusters together into a single cluster. We don't move the data points or anything like that--we just consider them as a single unit, as opposed to two separate ones. This works at every stage, because in the beginning, we just treat each data point as a unique cluster. \n",
     "\n",
     "This becomes very intuitive when we look at the following gif--pay attention to the image on the left:\n",
