Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,8 +69,13 @@
     "\n",
     "This becomes very intuitive when we look at the following gif--pay attention to the image on the left:\n",
     "\n",
-    "<img src='dendrogram_gif.gif'>\n",
-    "\n",
+    "<img src='dendrogram_gif.gif'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "As the dots disappear, the visualization is replacing them with the newly calculated center of that cluster, which will be used for linkage purposes. Now, let's end this lesson by talking about visualizations we can use to interpret results!\n",
     "\n",
     "### Dendrograms and Clustergrams\n",
