Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,8 +84,13 @@
     "\n",
     "We can also visualize the same information by drawing lines representing each cluster at each step to create a _Clustergram_. Take a look at the following diagram below, which shows both a dendrogram and clustergram of the same HAC results:\n",
     "\n",
-    "<img src='clustergram.png'>\n",
-    "\n",
+    "<img src='clustergram.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### How Is HAC Used?\n",
     "\n",
     "HAC algorithms are used in generally the same way that K-Means and other clustering algorithms are used, for tasks such as market segmentation, or for gaining a deeper understanding of a dataset through cluster analysis. However, there are special cases of things that fit quite well in a Hierarchical Agglomerative structure--one of the most common use cases you'll see for HAC is the way that smartphones naturally sort photos inside their photos app! Take a look at your photos app on your phone, and the albums that it creates for you--you'll likely see that the albums are sorted in a **_hierarchical_** fashion! Perhaps the phone chooses to group photos by date first, and then by location,  or even content! In this way, these can be viewed as natural clusters within clusters, in a way that makes intuitive sense to users. When we browse, we likely want to see photos that were taken around the same time, and then at the same place, and then narrow it down to photos about the same things, to quickly browse and find what we're looking for. This is a great example of HAC being used in the wild!\n",
